k8s/base/crypto/lnd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lnd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-ssl-secret: lnd-internal-tls
spec:
  ingressClassName: nginx
  rules:
  - host: lnd.kutara.io
    http:
      paths:
      - backend:
          service:
            name: lnd
            port:
              number: 8080
        path: /rest
        pathType: Prefix
  tls:
  - hosts:
    - lnd.kutara.io
    secretName: lnd-tls
